fix alignment in datatable

--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,10 @@ thead th {
   background-color: #eef5fb !important;
 }
 
+.css-1i36psw {
+  text-align: left !important;
+}
+
 .css-6hp17o-MuiList-root-MuiMenu-list li {
   font-family: 'Teko';
 }
